--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.3
 Django==3.1.1
 django-ckeditor==6.0.0
 django-js-asset==1.2.2
+gunicorn==20.0.4
 isort==5.5.2
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
@@ -12,8 +13,11 @@ mysqlclient==2.0.1
 Pillow==7.2.0
 pycodestyle==2.6.0
 pylint==2.6.0
+python-decouple==3.3
 pytz==2020.1
 six==1.15.0
 sqlparse==0.3.1
 toml==0.10.1
+typed-ast==1.4.1
+whitenoise==5.2.0
 wrapt==1.12.1
